--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,10 +7,12 @@ version: 2
 updates:
 - package-ecosystem: npm
   directory: "/"
+# decides when to pull the dependencies
   schedule:
     interval: weekly
     time: "11:00"
   open-pull-requests-limit: 10
+#tells what are all the dependencies to ignore
   ignore:
   - dependency-name: electron
     versions:
